# sfslite

./: CMakeLists.txt
Attic/python/: setup.py
Attic/python/ex1/: ex1.py  ex1srv.py
Attic/python/sfs/setup/: rpcc.py
arpc/: CMakeLists.txt
arpcgen/: CMakeLists.txt
async/: CMakeLists.txt  daemonize.C  spawn.C
crypt/: CMakeLists.txt  mpz_raw.C
libaapp/: CMakeLists.txt
libsafeptr/: CMakeLists.txt
libsfs/: CMakeLists.txt
libtame/: CMakeLists.txt
rpcc/: CMakeCache.txt  CMakeLists.txt
svc/: CMakeLists.txt
tame/: CMakeLists.txt
tools/: CMakeLists.txt
